test_next-20170103/20170102211534/build/defconfig/build_20170102211534_log.txt
test_build: Mon Jan 2 21:18:54 PST 2017: started on defconfig test_next-20170103 (533d7e3a9f5815bc73d0ccb4ef7587be98d647a1)
test_build: Mon Jan 2 21:18:54 PST 2017: serial is 20170102211534
arch/arm64/Makefile:43: Detected assembler with broken .inst; disassembly will be unreliable
arch/arm64/Makefile:43: Detected assembler with broken .inst; disassembly will be unreliable
arch/arm64/Makefile:43: Detected assembler with broken .inst; disassembly will be unreliable
arch/arm64/Makefile:23: ld does not support --fix-cortex-a53-843419; kernel may be susceptible to erratum
arch/arm64/Makefile:43: Detected assembler with broken .inst; disassembly will be unreliable
In file included from init/main.c:88:0:
./arch/arm64/include/asm/setup.h:14:29: error: redefinition of ‘kaslr_offset’
 static inline unsigned long kaslr_offset(void)
                             ^
In file included from ./arch/arm64/include/asm/page.h:54:0,
                 from ./include/linux/mm_types.h:16,
                 from ./include/linux/sched.h:27,
                 from ./arch/arm64/include/asm/compat.h:25,
                 from ./arch/arm64/include/asm/stat.h:23,
                 from ./include/linux/stat.h:5,
                 from ./include/linux/module.h:10,
                 from init/main.c:15:
./arch/arm64/include/asm/memory.h:168:29: note: previous definition of ‘kaslr_offset’ was here
 static inline unsigned long kaslr_offset(void)
                             ^
make[1]: *** [init/main.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make: *** [init] Error 2
make: *** Waiting for unfinished jobs....
In file included from arch/arm64/kernel/setup.c:56:0:
./arch/arm64/include/asm/setup.h:14:29: error: redefinition of ‘kaslr_offset’
 static inline unsigned long kaslr_offset(void)
                             ^
In file included from ./arch/arm64/include/asm/page.h:54:0,
                 from ./include/linux/mmzone.h:20,
                 from ./include/linux/gfp.h:5,
                 from ./include/linux/slab.h:14,
                 from ./include/linux/resource_ext.h:19,
                 from ./include/linux/acpi.h:26,
                 from arch/arm64/kernel/setup.c:20:
./arch/arm64/include/asm/memory.h:168:29: note: previous definition of ‘kaslr_offset’ was here
 static inline unsigned long kaslr_offset(void)
                             ^
make[1]: *** [arch/arm64/kernel/setup.o] Error 1
make[1]: *** Waiting for unfinished jobs....
In file included from arch/arm64/mm/init.c:47:0:
./arch/arm64/include/asm/setup.h:14:29: error: redefinition of ‘kaslr_offset’
 static inline unsigned long kaslr_offset(void)
                             ^
In file included from ./arch/arm64/include/asm/page.h:54:0,
                 from ./include/linux/mmzone.h:20,
                 from ./include/linux/swap.h:6,
                 from arch/arm64/mm/init.c:23:
./arch/arm64/include/asm/memory.h:168:29: note: previous definition of ‘kaslr_offset’ was here
 static inline unsigned long kaslr_offset(void)
                             ^
make[1]: *** [arch/arm64/mm/init.o] Error 1
make: *** [arch/arm64/mm] Error 2
make: *** [arch/arm64/kernel] Error 2
test_build: Mon Jan 2 21:19:10 PST 2017: FAILED on defconfig test_next-20170103
test_build: Mon Jan 2 21:19:10 PST 2017: ended on defconfig test_next-20170103
